--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
 </body>
 </html>
 <!-- ERRORES -->
+<!-- posted no era del tamaño -->
 <!-- LAS FUNCIONES PREDETERMINADAS DE VIDEO COMO PAUSAR ES video.pause y habia colocado video.paused -->
 <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous"> -->
